Kubernetes/Traefik/traefik-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  tls:
      secretName: traefik-dashboard-custom-tls
  routes:
    - match: Host(`traefik.home.local`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`traefik.home.local`) && PathPrefix(`/ping`)
      kind: Rule
      services:
        - name: ping@internal
          kind: TraefikService
